// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`headless component > using default props should match snapshot 1`] = `
"
.🐻-1587700805 { color: green;text-decoration: line-through;font-size: 16px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { Text } from '@kuma-ui/core';
function App() {
  return <Text className={\\"🐻-1587700805\\"} />;
}
"
`;

exports[`headless component > using default props with inline props should match snapshot 1`] = `
"
.🐻-4138457428 { color: blue;text-decoration: line-through;font-size: 12px; }

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { Text } from '@kuma-ui/core';
function App() {
  return <Text className={\\"🐻-4138457428\\"} />;
}
"
`;
